<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">BP Carwash</string>
    <string name="brand_wordmark">bp</string>
    <string name="header_title">Carwash</string>
    <string name="header_subtitle">Select your wash</string>

    <string name="processing_title">Present card</string>
    <string name="processing_subtitle">Tap, insert or swipe to pay</string>
    <string name="cancel">Cancel</string>

    <string name="approved_title">Approved</string>
    <string name="approved_subtitle">Wash unlocked</string>
    <string name="approved_instruction">Drive through to the wash bay</string>

    <string name="declined_title">Payment declined</string>
    <string name="declined_subtitle">No charge was made.\nPlease try another card.</string>
    <string name="try_again">Try again</string>

    <string name="badge_best_value">BEST VALUE</string>
    <string name="footer_tagline">Powered by Quest QT850</string>
</resources>
